--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.h1 {
+  font-size: 50px;
+}
+
+.h2 {
+  font-size: 40px;
+}
+
+.h3 {
+  font-size: 30px;
+}
+
+.h4 {
+  font-size: 25px;
+}
+
+.h5 {
+  font-size: 20px;
+}
+
+.h6 {
+  font-size: 18px;
+}
+.h7 {
+  font-size: 16px;
+}
+
+.h8 {
+  font-size: 14px;
+}
+
+.h9 {
+  font-size: 12px;
+}
+
+.h10 {
+  font-size: 10px;
+}
+
+.h11 {
+  font-size: 8px;
+}
+
+.h12 {
+  font-size: 6px;
+}
