--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,6 +25,7 @@
 .h6 {
   font-size: 18px;
 }
+
 .h7 {
   font-size: 16px;
 }
@@ -47,4 +48,26 @@
 
 .h12 {
   font-size: 6px;
+}
+
+.cat-left-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -1.5rem;
+}
+
+.cat-right-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -1.5rem;
+}
+
+.res-left-nav {
+  margin-top: 1.25rem;
+}
+
+.res-right-nav {
+  margin-top: 1.25rem;
 }
